--- a/src/pages/books/book-info.f7.html
+++ b/src/pages/books/book-info.f7.html
@@ -10,6 +10,13 @@
               </h5>
             </div>
             <div class="card-body">
+              ${alert && $h`
+              <div class="form-group">
+                <div class="alert alert-danger" role="alert">
+                  ${returnMessage}
+                </div>
+              </div>
+              `}
               <div class="table-responsive">
                 <table class="table table-hover ">
                   <thead>
@@ -36,12 +43,14 @@
                     <td>${book.responsible_person.name}</td>
                     <td>${book.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
                     <td>
-                      <a href="/borrowers/info/${book.borrower}/" class="btn btn-primary btn-sm" role="button">
-                        <i class="mdi mdi-human-male"></i>
-                      </a>
                       <a class="btn btn-primary btn-sm" href="#">
                         <i class="mdi mdi-pencil"></i>
                       </a>
+                      ${book.borrowed_info.borrower !== "" && $h`
+                        <a href="/borrowers/info/${book.borrowed_info.borrower}/" class="btn btn-primary btn-sm" role="button">
+                          <i class="mdi mdi-human-male"></i>
+                        </a>
+                      `}
                     </td>
                   </tr>
                   </tbody>
@@ -60,18 +69,43 @@
 
 	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
 		const bookCode = props.bookCode;
-		console.log(bookCode);
+
 		let book = {
-			responsible_person: {}
-    };
+			responsible_person: {},
+      borrowed_info: {}
+		};
+		let alert = false;
+		let returnMessage = "";
 
-		Clm.api("books/" + bookCode).then(response => {
-			console.log(response);
-			book = response.data.book_details;
-			$update();
-		});
+		const resetInfo = async function () {
+			try {
+				let response = await Clm.api("books/" + bookCode + "/isBorrowed");
+				if (!response.error) {
+					response = await Clm.api("books/" + bookCode);
+					console.log(response);
+					if (!response.error) {
+						alert = false;
+						book = response.data.book_details;
+					}
+					else {
+						alert = true;
+						returnMessage = response.message;
+					}
+				}
+				else {
+					alert = true;
+					returnMessage = response.message;
+				}
+			}
+			catch (e) {
+				console.log(e);
+				alert = true;
+				returnMessage = "Có lỗi xảy ra";
+			}
+      $update();
+		}
 
-
+		resetInfo();
 		return $render;
 	}
 </script>
