--- a/src/pages/borrowers/add-borrower.f7.html
+++ b/src/pages/borrowers/add-borrower.f7.html
@@ -94,7 +94,7 @@
                                 ${!foundBook && alertFindBook && $h`
                                 <div class="form-group">
                                     <div class="alert alert-danger" role="alert">
-                                        Không tìm thấy sách
+                                        ${findBookMessage}
                                     </div>
                                 </div>
                                 `}
@@ -161,6 +161,7 @@
         let addSuccess = false;
         let alertFindBook = false;
         let foundBook = null;
+        let findBookMessage = "";
         let pendingBorrowedBooks = [];
 
         const submitCreation = async function (e) {
@@ -199,7 +200,8 @@
                                 bookId: pendingBorrowedBooks[i]._id,
                                 borrowedTime: new Date().getTime(),
                                 expiredTime: new Date().getTime() + 1000 * 60 * 60 * 24 * 7,
-                                borrowerId: borrowerId
+                                borrowerId: borrowerId,
+                                responsiblePerson: Clm.account._id
                             });
                         }
                         console.log(response);
@@ -216,15 +218,41 @@
             }
         }
 
-        const findBook = function (e) {
+        const findBook = async function (e) {
+            alertFindBook = true;
             const bookCode = $('#input-book-code').val();
-            Clm.api("books/" + bookCode).then(response => {
-                console.log(response);
-                if (response.error) return Clm.alert(response.error);
-                foundBook = response.data['book_details'];
-                alertFindBook = true;
+            const isAdded = !(pendingBorrowedBooks.findIndex(book => book.code === bookCode) === -1);
+            if (isAdded) {
+                findBookMessage = "Sách đã được thêm";
                 $update();
-            });
+                return;
+            }
+            try {
+                let response = await Clm.api('books/' + bookCode +'/isBorrowed');
+                if (response.error) {
+                    foundBook = null;
+                    findBookMessage = response.message;
+                }
+                else if (response.data.is_borrowed) {
+                    foundBook = null;
+                    findBookMessage = "Sách đã được mượn";
+                } else {
+                    response = await Clm.api("books/" + bookCode)
+                    console.log(response);
+                    if (response.error) {
+                        foundBook = null;
+                        findBookMessage = response.message;
+                    } else {
+                        foundBook = response.data['book_details'];
+                    }
+                }
+            }
+            catch (e) {
+                console.log(e);
+                foundBook = null;
+                findBookMessage = "Có lỗi xảy ra";
+            }
+            $update();
         }
 
         const addBook = function (book) {
