--- a/src/pages/books/available-books.f7.html
+++ b/src/pages/books/available-books.f7.html
@@ -14,6 +14,13 @@
                 </div>
               </div>
               <div class="card-body">
+                ${alert && $h`
+                <div class="form-group">
+                  <div class="alert alert-danger" role="alert">
+                    ${returnMessage}
+                  </div>
+                </div>
+                `}
                 <div class="table-responsive">
                   <table class="table table-hover ">
                     <thead>
@@ -32,28 +39,28 @@
                     </thead>
                     <tbody>
                     ${availableBooks.map((book, i) => $h`
-                      <tr>
-                        <td>${i + 1}</td>
-                        <td>${book.name}</td>
-                        <td>${book.author}</td>
-                        <td>${book.code}</td>
-                        <td>${book.location}</td>
-                        <td>${book.cost}</td>
-                        <td>${Clm.timeConverter(book.imported_time)}</td>
-                        <td>${book.responsible_person.name}</td>
-                        <td>${book.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
-                        <td>
-                          <a href="/books/info/${book.code}/" class="btn btn-primary btn-sm" role="button">
-                            <i class="mdi mdi-menu"></i>
-                          </a>
-                          <button @click="${deleteBook}" type="button" class="btn btn-danger btn-sm"
-                                  data-toggle="modal" data-target="#deleteProject"
-                                  data-code="${book.code}">
-                            <i class="mdi mdi-delete"></i>
-                          </button>
+                    <tr>
+                      <td>${i + 1}</td>
+                      <td>${book.name}</td>
+                      <td>${book.author}</td>
+                      <td>${book.code}</td>
+                      <td>${book.location}</td>
+                      <td>${book.cost}</td>
+                      <td>${Clm.timeConverter(book.imported_time)}</td>
+                      <td>${book.responsible_person.name}</td>
+                      <td>${book.borrowed_info.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
+                      <td>
+                        <a href="/books/info/${book.code}/" class="btn btn-primary btn-sm" role="button">
+                          <i class="mdi mdi-menu"></i>
+                        </a>
+                        <button @click="${deleteBook}" type="button" class="btn btn-danger btn-sm"
+                                data-toggle="modal" data-target="#deleteProject"
+                                data-code="${book.code}">
+                          <i class="mdi mdi-delete"></i>
+                        </button>
 
-                        </td>
-                      </tr>
+                      </td>
+                    </tr>
                     `)}
                     </tbody>
                   </table>
@@ -72,6 +79,8 @@
 
 	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
 		let availableBooks = [];
+    let alert = false;
+    let returnMessage = "";
 
 		const resetList = (e) => {
 			Clm.api("books/available/").then(response => {
@@ -86,14 +95,24 @@
 		const deleteBook = (e) => {
 			let bookCode = e.currentTarget.dataset.code;
 
-			Clm.openConfirmModal('deleteBook').then(isConfirmed => {
+			Clm.openConfirmModal('deleteBook').then(async isConfirmed => {
 				if (!isConfirmed) return;
 
-				Clm.api("books/" + bookCode + "/delete").then(response => {
-					Clm.alert("Tester Portal", response.message);
-
-					resetList();
-				});
+				try {
+          let response = await Clm.api("books/" + bookCode + "/returnBook");
+          if (!response.error) {
+            response = await Clm.api("books/" + bookCode + "/delete");
+            if (response.error) {
+            	alert = true;
+              returnMessage = response.message;
+              $update();
+            }
+            resetList();
+          }
+        }
+        catch (e) {
+	        console.log(e);
+        }
 			});
 		}
 
