--- a/src/pages/books/book-info.f7.html
+++ b/src/pages/books/book-info.f7.html
@@ -41,15 +41,16 @@
                     <td>${book.cost}</td>
                     <td>${Clm.timeConverter(book.imported_time)}</td>
                     <td>${book.responsible_person.name}</td>
-                    <td>${book.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
+                    <td>${book.borrowed_info.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
                     <td>
                       <a class="btn btn-primary btn-sm" href="#">
                         <i class="mdi mdi-pencil"></i>
                       </a>
-                      ${book.borrowed_info.borrower !== "" && $h`
-                        <a href="/borrowers/info/${book.borrowed_info.borrower}/" class="btn btn-primary btn-sm" role="button">
-                          <i class="mdi mdi-human-male"></i>
-                        </a>
+                      ${!book.borrowed_info.borrower.student_code" && $h`
+                      <a href="/borrowers/info/${book.borrowed_info.borrower.student_code}/" class="btn btn-primary btn-sm"
+                         role="button">
+                        <i class="mdi mdi-human-male"></i>
+                      </a>
                       `}
                     </td>
                   </tr>
@@ -72,25 +73,20 @@
 
 		let book = {
 			responsible_person: {},
-      borrowed_info: {}
+			borrowed_info: {
+				borrower: {}
+      }
 		};
 		let alert = false;
 		let returnMessage = "";
 
 		const resetInfo = async function () {
 			try {
-				let response = await Clm.api("books/" + bookCode + "/isBorrowed");
+				let response = await Clm.api("books/" + bookCode);
+				console.log(response);
 				if (!response.error) {
-					response = await Clm.api("books/" + bookCode);
-					console.log(response);
-					if (!response.error) {
-						alert = false;
-						book = response.data.book_details;
-					}
-					else {
-						alert = true;
-						returnMessage = response.message;
-					}
+					alert = false;
+					book = response.data.book_details;
 				}
 				else {
 					alert = true;
@@ -102,7 +98,7 @@
 				alert = true;
 				returnMessage = "Có lỗi xảy ra";
 			}
-      $update();
+			$update();
 		}
 
 		resetInfo();
