--- a/src/pages/books/available-books.f7.html
+++ b/src/pages/books/available-books.f7.html
@@ -48,7 +48,7 @@
                       <td>${book.cost}</td>
                       <td>${Clm.timeConverter(book.imported_time)}</td>
                       <td>${book.responsible_person.name}</td>
-                      <td>${book.borrowed_info.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
+                      <td>${(book.borrowed_info[0] && book.borrowed_info[0].is_borrowed) ? "Đã mượn" : "Chưa mượn"}</td>
                       <td>
                         <a href="/books/info/${book.code}/" class="btn btn-primary btn-sm" role="button">
                           <i class="mdi mdi-menu"></i>
