--- a/src/pages/books/book-info.f7.html
+++ b/src/pages/books/book-info.f7.html
@@ -41,13 +41,13 @@
                     <td>${book.cost}</td>
                     <td>${Clm.timeConverter(book.imported_time)}</td>
                     <td>${book.responsible_person.name}</td>
-                    <td>${book.borrowed_info.is_borrowed === true ? "Đã mượn" : "Chưa mượn"}</td>
+                    <td>${(book.borrowed_info[0] && book.borrowed_info[0].is_borrowed) ? "Đã mượn" : "Chưa mượn"}</td>
                     <td>
                       <a class="btn btn-primary btn-sm" href="#">
                         <i class="mdi mdi-pencil"></i>
                       </a>
-                      ${!book.borrowed_info.borrower.student_code" && $h`
-                      <a href="/borrowers/info/${book.borrowed_info.borrower.student_code}/" class="btn btn-primary btn-sm"
+                      ${(book.borrowed_info[0] && book.borrowed_info[0].is_borrowed) && $h`
+                      <a href="/borrowers/info/${book.borrowed_info[0].borrower.student_code}/" class="btn btn-primary btn-sm"
                          role="button">
                         <i class="mdi mdi-human-male"></i>
                       </a>
