--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -81,11 +81,11 @@
               <div class="card m-b-30">
 
                 <div class="card-header">
-                  <div class="card-title">Người mượn mới</div>
+                  <div class="card-title">Top book</div>
                 </div>
 
                 <div class="list-group list-group-flush">
-                  ${joinedProjects.map(project => $h`
+                  ${topBooks.map(book => $h`
                   <div class="list-group-item d-flex  align-items-center">
                     <div class="m-r-20">
                       <div class="avatar avatar-sm">
@@ -93,20 +93,20 @@
                       </div>
                     </div>
                     <div class="">
-                      <div>${project.title}</div>
+                      <div>${book.name}</div>
                       <div class="text-muted">
-                        ${project.platform}
+                        ${book.platform}
                       </div>
                     </div>
                     <div class="ml-auto">
-                      <a href="/projects/${project.id}/" class="btn btn-white">Chi tiết</a>
+                      <a href="/books/${book.code}/" class="btn btn-white">Chi tiết</a>
                     </div>
                   </div>
                   `)}
                 </div>
-                ${joinedProjects.length == 0 && $h`
+                ${topBooks.length === 0 && $h`
                 <div class="card-body">
-                  <p>Hiện tại chưa có người mượn mới!</p>
+                  <p></p>
                 </div>
                 `}
               </div>
@@ -223,30 +223,37 @@
 </template>
 
 <script>
-	import Clm from "../../js/clm";
+  import Clm from "../../js/clm";
 
-	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-		let joinedProjects = [];
-		let borrowingBorrowers = [];
-		let books = [];
-		let availableBooks = [];
+  export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+    let borrowingBorrowers = [];
+    let books = [];
+    let availableBooks = [];
+    let topBooks = [];
 
-		const resetList = async function () {
+    const resetList = async function () {
       let response = await Clm.api("borrowers/borrowing");
       borrowingBorrowers = response.data.list_borrowers;
-			console.log(borrowingBorrowers);
-			borrowingBorrowers.sort((a, b) => {
+      console.log(borrowingBorrowers);
+      borrowingBorrowers.sort((a, b) => {
       });
       response = await Clm.api("books/all");
       books = response.data.list_books;
+      books.sort((a, b) => {
+        if (a.borrowed_times < b.borrowed_times) return 1;
+        else if (a.borrowed_times > b.borrowed_times) return -1;
+        else return 0;
+      });
+      topBooks = books.slice(0, 5);
+      console.log(topBooks);
       response = await Clm.api("books/available");
       availableBooks = response.data.list_available_books;
       $update();
-		}
+    }
 
-		resetList();
+    resetList();
 
-		// Return render function
-		return $render;
-	}
+    // Return render function
+    return $render;
+  }
 </script>
