--- a/src/pages/borrowers/list-borrowers.f7.html
+++ b/src/pages/borrowers/list-borrowers.f7.html
@@ -32,6 +32,7 @@
                       <th>Điện thoại</th>
                       <th>Email</th>
                       <th>Số sách</th>
+                      <th>Hành động</th>
                     </tr>
                     </thead>
                     <tbody>
