--- a/src/pages/overview/dashboard.f7.html
+++ b/src/pages/overview/dashboard.f7.html
@@ -16,7 +16,7 @@
                 <div class="card-body">
                   <div class="row p-t-20 p-b-20">
                     <div class="my-auto col-md-7">
-                      <h1 class="m-0">${borrowingBorrowers.length}</h1>
+                      <h1 class="m-0">${borrowers.length}</h1>
                       <p class="m-0 text-muted">
                         Số người mượn sách
                       </p>
@@ -81,7 +81,7 @@
               <div class="card m-b-30">
 
                 <div class="card-header">
-                  <div class="card-title">Top book</div>
+                  <div class="card-title">Top sách</div>
                 </div>
 
                 <div class="list-group list-group-flush">
@@ -99,7 +99,7 @@
                       </div>
                     </div>
                     <div class="ml-auto">
-                      <a href="/books/${book.code}/" class="btn btn-white">Chi tiết</a>
+                      <a href="/books/info/${book.code}/" class="btn btn-white">Chi tiết</a>
                     </div>
                   </div>
                   `)}
@@ -114,104 +114,36 @@
 
             <div class="col-lg-4 m-b-30">
               <div class="card m-b-30">
-                <div class="card">
-                  <div class="card-media ">
-                    <div class="card-media ">
-                      <img class="card-img-top rounded" src="assets/img/users/user-5.jpg"
-                           alt="Card image cap"/>
-                    </div>
-                  </div>
 
-                  <div class="card-body">
-                    <div class="row">
-                      <div class="col-7 my-auto">
-                        <h4 class="m-0"><span class="js-greeting"></span></h4>
-                      </div>
-                      <div class="col-5 text-right">
-                        <a href="#" class="btn btn-success btn-rounded-circle btn-lg"> <i
-                          class="mdi mdi-pencil"></i> </a>
-                      </div>
-                    </div>
-                    <hr></hr>
-
-                    <div class="">
-                      <p>Today</p>
-                    </div>
-
-                    <div class="timeline timeline-xs ">
-                      <div class="timeline-item">
-                        <div class="timeline-wrapper">
-                          <div class="">
-                            <div class="avatar avatar-xs">
-                              <div class="avatar-title rounded-circle">
-                                <i class="mdi mdi-phone"></i>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-auto">
-                            <p class="m-0">Call Mathew Peter</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-wrapper">
-                          <div class="">
-                            <div class="avatar avatar-xs">
-                              <div class="avatar-title bg-info rounded-circle">
-                                <i class="mdi mdi-shape-outline"></i>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-auto">
-                            <p class="m-0">Create new workflow</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-wrapper">
-                          <div class="">
-                            <div class="avatar avatar-xs">
-                              <div class="avatar-title bg-success rounded-circle">
-                                <i class="mdi mdi-eye-outline"></i>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-auto">
-                            <p class="m-0">Write Blog</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-wrapper">
-                          <div class="">
-                            <div class="avatar avatar-xs">
-                              <div class="avatar-title bg-dark rounded-circle">
-                                <i class="mdi mdi-google"></i>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-auto">
-                            <p class="m-0">Renew Google Fiber</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="timeline-item ">
-                        <div class="timeline-wrapper">
-                          <div class="">
-                            <div class="avatar avatar-xs">
-                              <div class="avatar-title bg-warning rounded-circle">
-                                <i class="mdi mdi-sleep"></i>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-auto text-muted">
-                            <p class="m-0">Take Powernap</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                <div class="card-header">
+                  <div class="card-title">Top người mượn sách</div>
                 </div>
+
+                <div class="list-group list-group-flush">
+                  ${topBorrowers.map(borrowers => $h`
+                  <div class="list-group-item d-flex  align-items-center">
+                    <div class="m-r-20">
+                      <div class="avatar avatar-sm">
+                        <img src="assets/img/users/user-5.jpg" class="avatar-img avatar-sm rounded-circle" alt=""/>
+                      </div>
+                    </div>
+                    <div class="">
+                      <div>${borrowers.name}</div>
+                      <div class="text-muted">
+                        ${borrowers.platform}
+                      </div>
+                    </div>
+                    <div class="ml-auto">
+                      <a href="/borrowers/info/${borrowers.student_code}/" class="btn btn-white">Chi tiết</a>
+                    </div>
+                  </div>
+                  `)}
+                </div>
+                ${topBorrowers.length === 0 && $h`
+                <div class="card-body">
+                  <p></p>
+                </div>
+                `}
               </div>
             </div>
           </div>
@@ -226,17 +158,23 @@
   import Clm from "../../js/clm";
 
   export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-    let borrowingBorrowers = [];
+    let borrowers = [];
     let books = [];
     let availableBooks = [];
     let topBooks = [];
+    let topBorrowers = [];
 
     const resetList = async function () {
-      let response = await Clm.api("borrowers/borrowing");
-      borrowingBorrowers = response.data.list_borrowers;
-      console.log(borrowingBorrowers);
-      borrowingBorrowers.sort((a, b) => {
+      let response = await Clm.api("borrowers/all");
+      borrowers = response.data.list_borrowers;
+      console.log(borrowers);
+      borrowers.sort((a, b) => {
+        if (a.borrowed_books_amount < b.borrowed_books_amount) return 1;
+        else if (a.borrowed_books_amount > b.borrowed_books_amount) return -1;
+        else return 0;
       });
+      topBorrowers = borrowers.slice(0, 10);
+
       response = await Clm.api("books/all");
       books = response.data.list_books;
       books.sort((a, b) => {
@@ -244,8 +182,8 @@
         else if (a.borrowed_times > b.borrowed_times) return -1;
         else return 0;
       });
-      topBooks = books.slice(0, 5);
-      console.log(topBooks);
+      topBooks = books.slice(0, 10);
+
       response = await Clm.api("books/available");
       availableBooks = response.data.list_available_books;
       $update();
